--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
         <div class="span12">
 
-          <h1>create.Kon</h1>
+          <h1>create.Kon:Development Version</h1>
 
         </div>
 
@@ -296,7 +296,7 @@
 
         <div class="span5 offset1 video">
 
-          <img class="img-polaroid" src="http://i44.tinypic.com/315mjvk.jpg" width="480" height="300">
+          <img class="img-polaroid" alt="Placeholder" src="http://i44.tinypic.com/315mjvk.jpg" width="480" height="300">
 
         </div>
 
@@ -306,9 +306,11 @@
 
         <div class="span5 actions">
 
+	  <div class="row-fluid">
+
           <div class="span8 offset2">
 
-            <div class="statistics">
+            <div class="row-fluid statistics">
 
               <div class="span4">
 
@@ -350,6 +352,8 @@
 
           </div>
 
+	  <div class="row-fluid">
+
           <div class="span10 offset1">
 
             <!-- Bootstrap progress bar -->
@@ -365,6 +369,8 @@
             </div>
 
           </div>
+	  </div>
+	  <div class="row-fluid">
 
           <div class="span6 offset3 order">
 
@@ -375,6 +381,8 @@
             <button class="btn btn-success btn-large">Preorder</button>
 
           </div>
+	  </div>
+	  <div class="row-fluid">
 
           <div class="span8 offset2 social">
 
@@ -387,8 +395,9 @@
             <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
 
           </div>
-
+	  </div>
         </div>
+	</div>
 
       </div>
 
@@ -406,7 +415,7 @@
 
         <div class="span5 offset1 asset">
 
-          <img class="img-polaroid" src="http://i43.tinypic.com/2rmbcye.jpg" width="480" height="300">
+          <img class="img-polaroid" alt="Placeholder" src="http://i43.tinypic.com/2rmbcye.jpg" width="480" height="300">
 
         </div>
 
@@ -452,7 +461,7 @@
 
         <div class="span5 asset">
 
-          <img class="img-polaroid" src="http://i44.tinypic.com/2djpfg4.jpg" width="480" height="300">
+          <img class="img-polaroid" alt="Placeholder" src="http://i44.tinypic.com/2djpfg4.jpg" width="480" height="300">
 
         </div>
 
@@ -545,7 +554,6 @@
       <!-- http://creativecommons.org/licenses/ -->
 
       <div class="row-fluid footer">
-
         <div class="span12">
 
           <p>This work is licensed under
