Edited index.html- changes in product desc

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
         <div class="span12">
 
-          <h1>create.Kon:Development Version</h1>
+          <h1>create.Kon</h1>
 
         </div>
 
@@ -305,7 +305,7 @@
 
           <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
 
-          <p class="lead">Show the world your dreams.</p>
+          <p class="lead">think,share,collaborate,create!</p>
 
         </div>
 
@@ -397,7 +397,8 @@
 
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
 
-            <button class="btn btn-success btn-large">Preorder</button>
+           <!-- <button class="btn btn-success btn-large">Preorder</button>-->
+	    <a class="coinbase-button" data-code="766d826658b8220a36363a8efceaf249" data-button-style="custom_large" data-button-text="Preorder with Bitcoin"  href="https://coinbase.com/checkouts/766d826658b8220a36363a8efceaf249">Preorder With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 
           </div>
 	  </div>
@@ -455,8 +456,7 @@
         <h3> What are you sharing?</h3>
 
           <p>
-
-            Join a network of individuals and find others who appreciate your creation  whether it is a work of art, photography, code, blog or anything new. Build a portfolio and save all your creations in one place. Share and connect with other with similar dreams or working in similar fields.<br> <br>Let your imagination run wild!
+	    Do you want to change the world? Post your crazy ideas and see what people think about it. Join an open network of individuals and share and collaborate on interesting ideas and projects. Connect through similar interests. No thought is too wild or too unbelievable for this social network. Thinking about building a Time Machine, put it out there and find people willing to join you on your quest for the Holy Grail.  Share and connect with others with similar dreams or working in similar fields.<br> <br>Let your imagination run wild!
 
             </p> 
 
@@ -474,15 +474,15 @@
 
           <ul>
 
-            <li><p>Connect with other people who share similar dreams</li>
+            <li><p>Connect with other people who share similar interests </li>
 
-            <li><p>Keep track of your own creations</li>
+            <li><p>Post and keep track of your own ideas</li>
 
-            <li><p>Build a portfolio for prospective employers</li>
+            <li><p>Collaborate with others</li>
 
-            <li><p>Share content with others </li>
+            <li><p>Share content </li>
 
-            <li><p>Build a profile of original thought and creations over time..</li>
+            <li><p>Finally leave facebook and move on...</li>
 
           </ul>
 
@@ -532,7 +532,7 @@
 
                   <div class="accordion-inner">
 
-                    While there is a dearth of social networks out there that cater to different needs of the people, this network is unique in terms of how the connections are built and what kind of content may be shared and how.It allows you to track/collect all your origial creations in one place and share with the world .
+                    While there is a dearth of social networks out there that cater to different needs of the people, this network is unique in terms of how the connections are built and what kind of content may be shared and how.It allows you to track/collect all your crazy-mind stuff  in one place and share with the world .
 
                   </div>
 
@@ -558,8 +558,7 @@
 
                   <div class="accordion-inner">
 
-                    It is a combination of professional networks and social networks and gives you the best of both worlds.You can build a profile to showcase to prospective employees as well as connect and share your creations with others who have similar taste/talents.
-
+                    It is a combination of professional networks and social networks and gives you the best of both worlds.You can do pretty much whatever you want here.
                   </div>
 
                 </div>
